[package]
name = "clean_project"
version = "0.1.0"
authors = ["oriontvv <taranov.vv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
walkdir = "2.3.2"
